projects/search-engine-for-typesense/v29/roadmap.mdx
---
title: "Roadmap"
description: "What’s developed, verified, and planned: lifecycle, indexing, client, DSL, synonyms/stopwords, and engine extensions."
---

This page tracks what is currently developed (🟣), verified (debugged 🟢), and planned (🔴).

## Core lifecycle

- 🟢 Schema compile/diff/apply/rollback (Collections/Aliases)
  - Compile model DSL → Typesense schema
  - Apply with blue/green + retention; rollback via alias
  - Docs: <a href="https://typesense.org/docs/29.0/api/collections.html" target="_blank">Collections</a>, <a href="https://typesense.org/docs/29.0/api/aliases.html" target="_blank">Aliases</a>

## Indexing

- 🟢 JSONL bulk import (Documents → Import)
  - Docs: <a href="https://typesense.org/docs/29.0/api/documents.html#bulk-import" target="_blank">Bulk import</a>
- 🟢 Delete by filter (Documents → Delete by query)
  - Docs: <a href="https://typesense.org/docs/29.0/api/documents.html#delete-documents-by-query" target="_blank">Delete by query</a>
- 🟢 Partitioned rebuild (engine feature; orchestrated via DSL/CLI)
- 🟢 Data sources:
  - 🟢 ActiveRecord
  - 🟢 SQL
  - 🟢 Lambda

## Client and execution

- 🟢 Single-search (documents.search)
  - Docs: <a href="https://typesense.org/docs/29.0/api/search.html" target="_blank">Search parameters</a>
- 🟣 Multi-search (federated)
  - Docs: <a href="https://typesense.org/docs/29.0/api/multi-search.html" target="_blank">Multi-search</a>
- 🟣 URL caching knobs <code>use_cache</code>, <code>cache_ttl</code>
  - Docs: <a href="https://typesense.org/docs/29.0/api/search.html" target="_blank">Search parameters</a>

## Relation DSL → Search parameters

- 🟢 Query basics: <code>q</code>, <code>query_by</code>
  - Docs: <a href="https://typesense.org/docs/29.0/api/search.html" target="_blank">Search parameters</a>
- 🟢 Filters: <code>filter_by</code> (compiled from AST; templates supported)
  - Docs: <a href="https://typesense.org/docs/29.0/api/search.html" target="_blank">Search parameters</a>
- 🟢 Sort: <code>sort_by</code>
  - Docs: <a href="https://typesense.org/docs/29.0/api/search.html" target="_blank">Search parameters</a>
- 🟣 Field selection: <code>include_fields</code>, <code>exclude_fields</code>
  - Docs: <a href="https://typesense.org/docs/29.0/api/search.html" target="_blank">Search parameters</a>
- 🟢 Pagination: <code>page</code>, <code>per_page</code>
  - Docs: <a href="https://typesense.org/docs/29.0/api/search.html#pagination" target="_blank">Pagination</a>
- 🟣 Grouping: <code>group_by</code>, <code>group_limit</code>, <code>group_missing_values</code>
  - Docs: <a href="https://typesense.org/docs/29.0/api/search.html#grouping" target="_blank">Grouping</a>
- 🟣 Highlighting: <code>highlight_fields</code>, <code>highlight_full_fields</code>, <code>highlight_affix_num_tokens</code>, <code>highlight_start_tag</code>, <code>highlight_end_tag</code>, <code>snippet_threshold</code>
  - Docs: <a href="https://typesense.org/docs/29.0/api/search.html#highlighting" target="_blank">Highlighting</a>
- 🟣 Faceting: <code>facet_by</code>, <code>max_facet_values</code>, <code>facet_query</code>
  - Docs: <a href="https://typesense.org/docs/29.0/api/search.html#faceting" target="_blank">Faceting</a>
- 🟣 Ranking/typo/prefix: <code>num_typos</code>, <code>drop_tokens_threshold</code>, <code>prioritize_exact_match</code>, <code>query_by_weights</code>, <code>infix</code> (via DSL <code>prefix</code>)
  - Docs: <a href="https://typesense.org/docs/29.0/api/search.html" target="_blank">Search parameters</a>

## Synonyms & Stopwords

- 🟣 Runtime toggles: <code>enable_synonyms</code> (<code>use_synonyms</code>), <code>remove_stop_words</code> (<code>use_stopwords</code>)
  - Docs: <a href="https://typesense.org/docs/29.0/api/search.html" target="_blank">Search parameters</a>
- 🟣 Admin APIs: upsert/list/get/delete per collection
  - Docs: <a href="https://typesense.org/docs/29.0/api/synonyms.html" target="_blank">Synonyms API</a>, <a href="https://typesense.org/docs/29.0/api/stopwords.html" target="_blank">Stopwords API</a>

## Engine-specific extensions (not native Typesense features)

- 🟣 JOINs DSL (compile-time `$assoc.field` selection/filter/sort; adapter-side only)
- 🟣 Presets (merge/only/lock) with pruning and conflicts
- 🟣 Hit limits: early cap (`limit_hits`) and post-fetch validation (`validate_hits!`)
- 🟣 Partition planner/dispatcher (inline or ActiveJob)
- 🟣 DX helpers (`explain`, `dry_run!`, `to_params_json`, `to_curl`)
- 🟣 Observability (events, compact logging, optional OpenTelemetry)
- 🟢 Live TTY progress (StepLine, Spinner, LiveRenderer with doc-based progress bars)
- 🟢 Orphan physical collection pruning (`Schema.prune_orphans!` + rake task)
- 🟢 Failed indexation safety (`IndexationAborted` prevents alias swap)
- 🟢 Partition timeout detection (`PartitionTimeout` on pool timeout)
- 🟢 Interrupt-safe pool (`InterruptiblePool` for Ctrl+C handling)

## Not yet implemented

- 🔴 Geo search (filters and distance sort)
  - Docs: <a href="https://typesense.org/docs/29.0/api/search.html#geosearch" target="_blank">Geo search</a>
- 🔴 Vector search (ANN, `vector_query`, hybrid)
  - Docs: <a href="https://typesense.org/docs/29.0/api/vector-search.html" target="_blank">Vector Search</a>
- 🔴 Overrides management (CRUD)
  - Docs: <a href="https://typesense.org/docs/29.0/api/overrides.html" target="_blank">Overrides API</a>
- 🔴 Exhaustive/cutoff knobs: <code>exhaustive_search</code>, <code>search_cutoff_ms</code>
  - Docs: <a href="https://typesense.org/docs/29.0/api/search.html" target="_blank">Search parameters</a>
- 🔴 Advanced faceting extras (nested/sampling/custom facet sort)
  - Docs: <a href="https://typesense.org/docs/29.0/api/search.html#faceting" target="_blank">Faceting</a>

Backlinks: <a href="/projects/search-engine-for-typesense/v29/index">Overview</a>, <a href="/projects/search-engine-for-typesense/v29/cli">CLI</a>, <a href="/projects/search-engine-for-typesense/v29/configuration">Configuration</a>, <a href="/projects/search-engine-for-typesense/v29/relation">Relation</a>, <a href="/projects/search-engine-for-typesense/v29/compiler">Compiler</a>, <a href="/projects/search-engine-for-typesense/v29/indexer">Indexer</a>
